SPA: RangeMaster Swaps a given range band for the short range modifier.

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -519,6 +519,8 @@ PilotOptionsInfo.option.oblique_artillery.displayableName=Oblique Artilleryman (
 PilotOptionsInfo.option.oblique_artillery.description=Reduces scatter distance by two hexes.
 PilotOptionsInfo.option.pain_resistance.displayableName=Pain Resistance (MaxTech)
 PilotOptionsInfo.option.pain_resistance.description=When making consciousness rolls,\n1 is added to all rolls.\nAlso,\ndamage received from ammo explosions is reduced to 1.\nNote: This ability is only used for BattleMechs.
+PilotOptionsInfo.option.range_master.displayableName= RangeMaster (aToW)
+PilotOptionsInfo.option.range_master.description=Range modifiers are swapped with short range (Medium, Long, or Extreme).
 PilotOptionsInfo.option.sniper.displayableName= Sniper (aToW)
 PilotOptionsInfo.option.sniper.description=Range penalties are halved.
 PilotOptionsInfo.option.forward_observer.displayableName= Forward Observer (aToW)
