Updated history.txt for RAT Generator.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.23-GR (2016-08-26 03:00 UTC) GRAPHIC TEST RELEASE ONLY
 + Transparency now properly preserved in Unit icons, allowing shaded icons
 + Unit icon colors now preserved when camo is applied (only gray scale pixels
     have camo applied to them)
++ Added dynamic random assignment table generator.
 
 v0.41.22 (2016-08-26 03:00 UTC)
 + Issue #295: Roads not preventing swamp/rubble PSRs
