--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,7 +7,8 @@ v0.41.24-git
 +Data: New Sprites
 +Data: New Sprites
 +Data: Changes to Field Gunners/Artillery intro dates and moving them
-   from Unofficial to Infantry.
+   from Unofficial to Infantry
++ Fixed Mac OSX Packaging (Hopefully for good this time!)
 
 v0.41.23 (2016-09-20 00:07 UTC)
 + Issue #323: Artefacting drawing the boardview background
