RATGenerator: use EntityMovementMode instead of subtype strings; use flags instead of checking class inheritance when analysing unit equipment.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1787,23 +1787,23 @@ RandomArmyDialog.C3BA=C3
 RandomArmyDialog.C3BAB=C3 Boosted
 RandomArmyDialog.C3N=Naval C3
 RandomArmyDialog.Nova=Nova CEWS
-RandomArmyDialog.Motive.Hover=Hover
-RandomArmyDialog.Motive.Tracked=Tracked
-RandomArmyDialog.Motive.Wheeled=Wheeled
-RandomArmyDialog.Motive.WiGE=WiGE
-RandomArmyDialog.Motive.VTOL=VTOL
-RandomArmyDialog.Motive.Leg=Foot
-RandomArmyDialog.Motive.Jump=Jump
-RandomArmyDialog.Motive.Motorized=Motorized
-RandomArmyDialog.Motive.Hover=Hover
-RandomArmyDialog.Mech.Hover=Mech. Hover
-RandomArmyDialog.Mech.Tracked=Mech. Tracked
-RandomArmyDialog.Mech.Wheeled=Mech. Wheeled
-RandomArmyDialog.Motive.Aerodyne=Aerodyne
-RandomArmyDialog.Motive.Spheroid=Spheriod
-RandomArmyDialog.Motive.Naval=Displacement
-RandomArmyDialog.Motive.Hydrofoil=Hydrofoil
-RandomArmyDialog.Motive.Submarine=Submarine
+RandomArmyDialog.Motive.hover=Hover
+RandomArmyDialog.Motive.tracked=Tracked
+RandomArmyDialog.Motive.wheeled=Wheeled
+RandomArmyDialog.Motive.wige=WiGE
+RandomArmyDialog.Motive.vtol=VTOL
+RandomArmyDialog.Motive.leg=Foot
+RandomArmyDialog.Motive.jump=Jump
+RandomArmyDialog.Motive.motorized=Motorized
+RandomArmyDialog.Motive.umu=Amphibious
+RandomArmyDialog.Mech.hover=Mech. Hover
+RandomArmyDialog.Mech.tracked=Mech. Tracked
+RandomArmyDialog.Mech.wheeled=Mech. Wheeled
+RandomArmyDialog.Motive.aerodyne=Aerodyne
+RandomArmyDialog.Motive.spheroid=Spheriod
+RandomArmyDialog.Motive.naval=Displacement
+RandomArmyDialog.Motive.hydrofoil=Hydrofoil
+RandomArmyDialog.Motive.submarine=Submarine
 RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
 RandomArmyDialog.AddToForce=Add to Force
