--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 v0.41.25-git
++ Added movement type filters to RAT Generator for BA.
 
 v0.41.24 (2016-10-06 03:15 UTC)
 + Refactored FighterSquadron's specific methods so that we can more easily support all composite entities.
