--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1808,12 +1808,14 @@ RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
 RandomArmyDialog.AddToForce=Add to Force
 RandomArmyDialog.AddToForce.tooltip=Add selected line to chosen units.
+MissionRole.command=Command
+MissionRole.command.tooltip=Preference for units with the Command Mek quirk or with C3 Master equipment. 
 MissionRole.recon=Reconnaissance
 MissionRole.recon.tooltip=Generally faster units, often equipped with special electronics.
 MissionRole.raider=Raider
 MissionRole.raider.tooltip=Faster units with little or no dependence on ammo.
-MissionRole.incindiary=Incendiary
-MissionRole.incindiary.tooltip=Has flamers or inferno-capable weapons.
+MissionRole.incendiary=Incendiary
+MissionRole.incendiary.tooltip=Has flamers or inferno-capable weapons.
 MissionRole.ew_support=EW Support
 MissionRole.ew_support.tooltip=Has a probe, ECM, or communications equipment.
 MissionRole.artillery=Artillery
