--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -582,38 +582,51 @@ PilotOptionsInfo.option.edge_when_masc_fails.displayableName=   Use Edge for MAS
 PilotOptionsInfo.option.edge_when_masc_fails.description=MASC/Supercharger failures will be rerolled with Edge
 PilotOptionsInfo.option.clan_pilot_training.displayableName=Clan Pilot Training (Unofficial)
 PilotOptionsInfo.option.clan_pilot_training.description=Pilot has a +1 penalty for physical attacks,\nbecause clans do not train for dishonourable combat.
+
 PilotOptionsInfo.group.md.displayableName=Manei Domini Implants
+
+PilotOptionsInfo.option.artificial_pain_shunt.displayableName=Artificial Pain Shunt
+PilotOptionsInfo.option.artificial_pain_shunt.description=Pilot does not suffer damage from certain kinds of attacks.\nSee IO pg 78 for details.
+PilotOptionsInfo.option.comm_implant.displayableName=Cybernetic Comm Implant
+PilotOptionsInfo.option.comm_implant.description=NEED FLUFF. \nSee IO pg 78 for details. 
+PilotOptionsInfo.option.boost_comm_implant.displayableName=Boosted Cybernetic Comm Implant
+PilotOptionsInfo.option.boost_comm_implant.description=NEED FLUFF \nSee IO pg 78 for details.
+ 
+PilotOptionsInfo.option.cyber_imp_visual.displayableName=Sensory Implants (IR/EM Optical)
+PilotOptionsInfo.option.cyber_imp_visual.description=Conventional Infantry units receive 2-hex Active Probe. \nSee IO pg 78 for details.
+
+PilotOptionsInfo.option.cyber_imp_audio.displayableName=Sensory Implants (Enhanced Audio)
+PilotOptionsInfo.option.cyber_imp_audio.description=Infantry units receive 2-hex Active Probe. \nSee IO pg 78 for details.
+
+PilotOptionsInfo.option.cyber_imp_laser.displayableName=Sensory Implants (Laser/Telescopic Eyes)
+PilotOptionsInfo.option.cyber_imp_laser.description=Conventional infantry units receive -1 to-hit with ranged weapons. \nSee IO pg 78 for details.
+
+PilotOptionsInfo.option.mm_implants.displayableName=Multi-Modal Sensory Implant
+PilotOptionsInfo.option.mm_implants.description=Combination of Eye/Ear/Laser \nSee IO pg 79 for details.
+PilotOptionsInfo.option.enh_mm_implants.displayableName=Enhanced Multi-Modal Sensory Implants
+PilotOptionsInfo.option.enh_mm_implants.description=Enhanced Version of Eye/Ear/Laser \nSee IO pg 79 for details.
+PilotOptionsInfo.option.filtration_implants.displayableName=Filtration Implants
+PilotOptionsInfo.option.filtration_implants.description= Filtration Implants \nSee IO pg 79 for details.
+PilotOptionsInfo.option.gas_effuser_pheromone.displayableName=Gas Effuser (Pheromone)
+PilotOptionsInfo.option.gas_effuser_pheromone.description=Gas Effuser (Pheromone) \nSee IO pg 79 for details.
+PilotOptionsInfo.option.gas_effuser_toxin.displayableName=Gas Effuser (Toxin)
+PilotOptionsInfo.option.gas_effuser_toxin.description=Gas Effuser (Toxin) \nSee IO pg 79 for details.
+PilotOptionsInfo.option.dermal_armor.displayableName=Myomer Implants (Dermal Armor)
+PilotOptionsInfo.option.dermal_armor.description=Units are more resistant to damage. \nSee IO pg 80 for details.
+PilotOptionsInfo.option.dermal_camo_armor.displayableName=Myomer Implants (Dermal Armor Camoflage)   
+PilotOptionsInfo.option.dermal_camo_armor.description=Myomer Implants (Dermal Armor Camoflage) \nSee IO pg 80 for details.
+PilotOptionsInfo.option.tsm_implant.displayableName=Myomer Implants (Triple Strength)
+PilotOptionsInfo.option.tsm_implant.description=Units receive benefits as described in \nSee IO pg 81 for details.
+PilotOptionsInfo.option.triple_core_processor.displayableName=Triple-Core Processor
+PilotOptionsInfo.option.triple_core_processor.description=Triple core processor - \nSee IO pg 81 for details.
 PilotOptionsInfo.option.vdni.displayableName=VDNI
-PilotOptionsInfo.option.vdni.description=Pilot is more connected with vehicle.\nSee JHS3072,\np.\n129 for details.
+PilotOptionsInfo.option.vdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
 PilotOptionsInfo.option.bvdni.displayableName=Buffered VDNI
-PilotOptionsInfo.option.bvdni.description=Pilot is more connected with vehicle.\nSee JHS3072,\np.\n129 for details.
-PilotOptionsInfo.option.pain_shunt.displayableName=Pain Shunt
-PilotOptionsInfo.option.pain_shunt.description=Pilot does not suffer damage from certain kinds of attacks.\nSee JHS3072,\np.\n126 for details.
-PilotOptionsInfo.option.grappler.displayableName=Grappler/Electromagnet
-PilotOptionsInfo.option.grappler.description=Conventional Infantry units receive -2 bonus to swarm attacks.
-PilotOptionsInfo.option.pl_masc.displayableName=PL-MASC
+PilotOptionsInfo.option.bvdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
+PilotOptionsInfo.option.pl_enhanced.displayableName=Prosthetic limbs, Enhanced
+PilotOptionsInfo.option.grappler.description=Was Grappler/Electromagnet - \nSee IO pg 84 for details
+PilotOptionsInfo.option.pl_masc.displayableName=Prosthetic leg MASC
 PilotOptionsInfo.option.pl_masc.description=Conventional Infantry units can go faster.
-
-PilotOptionsInfo.option.cyber_imp_audio.displayableName=Cybernetic Sensor Implant - Audio
-PilotOptionsInfo.option.cyber_imp_audio.description=Conventional Infantry units receive 2-hex Active Probe.
-
-
-PilotOptionsInfo.option.cyber_imp_visual.displayableName=Cybernetic Sensor Implant -Visual
-PilotOptionsInfo.option.cyber_imp_visual.description=Infantry units whose warriors are enhanced with laser-sight or telescopic optical implants receive a -1 to-hit modifier for all weapon attacks. .
-
-
-PilotOptionsInfo.option.mm_implants.displayableName=Multi-Modal Sensory Implants
-PilotOptionsInfo.option.mm_implants.description=See IO pg 79.
-
-
-PilotOptionsInfo.option.comm_implant.displayableName=Comm Implant
-PilotOptionsInfo.option.comm_implant.description=Non-stackable +1 to initiative.
-PilotOptionsInfo.option.boost_comm_implant.displayableName=Boosted Comm Implant
-PilotOptionsInfo.option.boost_comm_implant.description=Units receive benefits as described in JHS3072.
-PilotOptionsInfo.option.dermal_armor.displayableName=Dermal Armor
-PilotOptionsInfo.option.dermal_armor.description=Units are more resistant to damage.
-PilotOptionsInfo.option.tsm_implant.displayableName=TSM Implant
-PilotOptionsInfo.option.tsm_implant.description=Units receive benefits as described in JHS3072.
 
 PartialRepairsInfo.group.part_repairs.displayableName=Partial Repairs
 PartialRepairsInfo.option.mech_reactor_3_crit.displayableName=3+ Critical Engine Hits
