--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.41.26-git
 + New Sprites.
 + Issue #357: Mass Configure Allows mechs to be deployed off board
++ Issue #204: Planning jump path means any subsequent walk paths climb buildings
 
 v0.41.25 (2016-10-15 14:40 UTC)
 + Added movement type filters to RAT Generator for BA.
