--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.41.26-git
 + Issue #357: Mass Configure Allows mechs to be deployed off board
 + Issue #204: Planning jump path means any subsequent walk paths climb buildings
 + Issue #368: Duplicate Messages When Changing Sensors
++ Issue #380: Graphical artefacting behind the board when using plain skin
 
 v0.41.25 (2016-10-15 14:40 UTC)
 + Added movement type filters to RAT Generator for BA.
