+ Issue #354: Better reporting for attacks against infantry using direct hits

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -206,3 +206,9 @@ Infantry.specializationTip8=Paramedics (Unimplemented)
 Infantry.specializationTip9=Paratroops (Unimplemented)
 Infantry.specializationTip10=TAG Troops (Unimplemented)
 Infantry.specializationTip11=SCUBA (Unimplemented)
+
+WeaponType.DirectFire=Direct fire
+WeaponType.BallisticCluster=Ballistic Cluster
+WeaponType.Pulse=Pulse
+WeaponType.Missile=Missile
+WeaponType.Burst=Burst-fire
