--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -6,6 +6,7 @@ v0.41.26-git
 + Issue #204: Planning jump path means any subsequent walk paths climb buildings
 + Issue #368: Duplicate Messages When Changing Sensors
 + Issue #380: Graphical artefacting behind the board when using plain skin
++ Issue #354: Better reporting for attacks against infantry using direct hits
 
 v0.41.25 (2016-10-15 14:40 UTC)
 + Added movement type filters to RAT Generator for BA.
