--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -1069,10 +1069,16 @@
 9961=Hidden unit <data> (<data>) prevents <data> (<data>) from entering hex <data>!
 9962=<data> (<data>) was unable to enter hex <data> because it would create a stacking violation with a hidden unit, movement ended!
 
-9970=Direct fire weapon against infantry,  damage reduced from <data> to <data>
-9971=Ballistic cluster weapon against infantry,  damage reduced from <data> to <data>
-9972=Pulse weapon against infantry, damage reduced from <data> to <data>
-9973=Missile weapon against infantry, damage reduced from <data> to <data>
-9974=Burst-fire weapon against infantry, damage changed from <data> to <data>
+9970=<data> weapon against infantry, damage reduced from <data> to <data>
+9971=<data> weapon against infantry in building, damage reduced from <data> to <data>
+9972=<data> weapon (treated as <data> due to MOS) against infantry, damage reduced from <data> to <data>
+9973=<data> weapon (treated as <data> due to MOS) against infantry in building, damage reduced from <data> to <data>
+
 9975=Burst-fire weapon against infantry in building, damage changed from <data> to <data>
 9976=Building provides no protection when units are on the same level!
+
+9980=Direct fire
+9981=Ballistic cluster
+9982=Pulse
+9983=Missile
+9984=Burst-fire
