Added formation builder tab to random army dialog.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1804,6 +1804,7 @@ RandomArmyDialog.Motive.spheroid=Spheriod
 RandomArmyDialog.Motive.naval=Displacement
 RandomArmyDialog.Motive.hydrofoil=Hydrofoil
 RandomArmyDialog.Motive.submarine=Submarine
+RandomArmyDialog.Formationtab=Formation Builder
 RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
 RandomArmyDialog.AddToForce=Add to Force
