Options to build air lance, nova/mechanized BA, or add second unit type to formation.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1805,6 +1805,11 @@ RandomArmyDialog.Motive.naval=Displacement
 RandomArmyDialog.Motive.hydrofoil=Hydrofoil
 RandomArmyDialog.Motive.submarine=Submarine
 RandomArmyDialog.Formationtab=Formation Builder
+RandomArmyDialog.mechBA=Mechanized BA
+RandomArmyDialog.simpleFormation=Simple Formation
+RandomArmyDialog.airLance=AirLance
+RandomArmyDialog.additionalUnits=Additional Units
+RandomArmyDialog.otherUnitType=Other Unit Type
 RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
 RandomArmyDialog.AddToForce=Add to Force
