--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -8,6 +8,9 @@ v0.41.26-git
 + Issue #380: Graphical artefacting behind the board when using plain skin
 + Issue #354: Better reporting for attacks against infantry using direct hits
 + Issue #381: HE ammo type missing in battle round report
++ New Sprites
++ Updating Turret Introdates.
++ adding XTRO V Primitives units (note the Ymir and Command Van has changed)
 
 v0.41.25 (2016-10-15 14:40 UTC)
 + Added movement type filters to RAT Generator for BA.
