+ ready to develop <0.41.27>

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.41.27-git
+
 v0.41.26 (2016-11-02 02:00 UTC)
 + New Sprites.
 + Issue #357: Mass Configure Allows mechs to be deployed off board
