--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1814,6 +1814,13 @@ RandomArmyDialog.Generate=Generate
 RandomArmyDialog.Generate.tooltip=Create random assignment table from selected options
 RandomArmyDialog.AddToForce=Add to Force
 RandomArmyDialog.AddToForce.tooltip=Add selected line to chosen units.
+ForceGenerationOptions.formationAnalysis=Analyze...
+AnalyzeFormationDialog.title=Analyze Formation
+AnalyzeFormationDialog.formation=Formation: 
+AnalyzeFormationDialog.weightClassRange=Weight Class Range: 
+AnalyzeFormationDialog.required=Required 
+AnalyzeFormationDialog.constraint=Constraint 
+AnalyzeFormationDialog.available=Available 
 MissionRole.command=Command
 MissionRole.command.tooltip=Preference for units with the Command Mek quirk or with C3 Master equipment. 
 MissionRole.recon=Reconnaissance
