Added line for grouping constraints to AnalyzeFormationDialog. Fixed IndexOutOfBoundsException in RATGenerator.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1818,9 +1818,11 @@ ForceGenerationOptions.formationAnalysis=Analyze...
 AnalyzeFormationDialog.title=Analyze Formation
 AnalyzeFormationDialog.formation=Formation: 
 AnalyzeFormationDialog.weightClassRange=Weight Class Range: 
-AnalyzeFormationDialog.required=Required 
-AnalyzeFormationDialog.constraint=Constraint 
-AnalyzeFormationDialog.available=Available 
+AnalyzeFormationDialog.all=All
+AnalyzeFormationDialog.required=Required
+AnalyzeFormationDialog.constraint=Constraint
+AnalyzeFormationDialog.available=Available
+AnalyzeFormationDialog.groups.format=%s (Groups of %d)
 MissionRole.command=Command
 MissionRole.command.tooltip=Preference for units with the Command Mek quirk or with C3 Master equipment. 
 MissionRole.recon=Reconnaissance
