--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -470,6 +470,9 @@ CommonMenuBar.fileBoardOpen=Open...
 CommonMenuBar.fileBoardSave=Save...
 CommonMenuBar.fileBoardSaveAs=Save As...
 CommonMenuBar.fileBoardSaveAsImage=Save As Image...
+CommonMenuBar.fileBoardSaveAsImage.tooltip=Save the current board as a PNG image, without any units displayed
+CommonMenuBar.fileBoardSaveAsImageUnits=Save As Image with Units...
+CommonMenuBar.fileBoardSaveAsImageUnits.tooltip=Save the current board as a PNG image, with all units
 CommonMenuBar.fileGameConnect=Connect...
 CommonMenuBar.fileGameConnectBot=Connect as Bot...
 CommonMenuBar.replacePlayer=Replace Player...
