PhaseDisplay buttons can now use tooltip text defined in i18n files

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -963,6 +963,7 @@ FiringDisplay.its_your_turn=It's your turn to fire.
 FiringDisplay.fireMode=Mode
 FiringDisplay.fireMore=More...
 FiringDisplay.fireNextTarg=Next Target
+FiringDisplay.fireNextTarg.tooltip=<html>Selects the next target (regardless of to hit.) <br>Holding Control when clicking will show next valid target that can be hit.</html>
 FiringDisplay.fireNext=\ Next Unit
 FiringDisplay.fireStrafe=Strafe
 FiringDisplay.OverheatNag.title=Allow overheating?
@@ -2241,6 +2242,7 @@ TargetingPhaseDisplay.its_your_turn=It's your turn to declare indirect attacks.
 TargetingPhaseDisplay.fireCancel=Cancel
 TargetingPhaseDisplay.fireMode=Mode
 TargetingPhaseDisplay.fireNextTarg=Next Target
+TargetingPhaseDisplay.fireNextTarg.tooltip=Selects the next target (regardless of to hit.) \nHolding Control when clicking will show next valid target that can be hit.
 TargetingPhaseDisplay.fireNext=Next Unit 
 TargetingPhaseDisplay.fireSkip=Skip
 TargetingPhaseDisplay.fireTwist=Twist
