--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 v0.41.27-git
 + Feature: Can save board image with units (renders the same as seen on screen)
++ Feature: PhaseDisplay buttons can now use tooltip text defined in i18n files
 
 v0.41.26 (2016-11-02 02:00 UTC)
 + New Sprites.
