Option to specify network when building formation.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1815,6 +1815,14 @@ RandomArmyDialog.Generate.tooltip=Create random assignment table from selected o
 RandomArmyDialog.AddToForce=Add to Force
 RandomArmyDialog.AddToForce.tooltip=Add selected line to chosen units.
 ForceGenerationOptions.formationAnalysis=Analyze...
+ForceGenerationOptions.Network=Network
+ForceGenerationOptions.Optional=Optional
+ForceGenerationOptions.C3Lance=C3
+ForceGenerationOptions.C3Command=Company Command
+ForceGenerationOptions.C3i=C3i
+ForceGenerationOptions.C3BLance=Boosted
+ForceGenerationOptions.C3BCommand=Company Command (Boosted)
+ForceGenerationOptions.Nova=Nova
 AnalyzeFormationDialog.title=Analyze Formation
 AnalyzeFormationDialog.formation=Formation: 
 AnalyzeFormationDialog.weightClassRange=Weight Class Range: 
