Possibility of 2xC3M + 2xC3S when building a company command unit.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1822,7 +1822,7 @@ ForceGenerationOptions.C3Command=Company Command
 ForceGenerationOptions.C3i=C3i
 ForceGenerationOptions.C3BLance=Boosted
 ForceGenerationOptions.C3BCommand=Company Command (Boosted)
-ForceGenerationOptions.Nova=Nova
+ForceGenerationOptions.Nova=Nova CEWS
 AnalyzeFormationDialog.title=Analyze Formation
 AnalyzeFormationDialog.formation=Formation: 
 AnalyzeFormationDialog.weightClassRange=Weight Class Range: 
