Added "only valid" & "no allies" options to firing phase next target
Holding Ctrl when clicking Next Target makes it so only valid/hittable targets
are selected.  Holding shift means that no allies will be targeting.  Both
shift and control can be held down.  This is described in the Next Target
tooltip.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -963,7 +963,7 @@ FiringDisplay.its_your_turn=It's your turn to fire.
 FiringDisplay.fireMode=Mode
 FiringDisplay.fireMore=More...
 FiringDisplay.fireNextTarg=Next Target
-FiringDisplay.fireNextTarg.tooltip=<html>Selects the next target (regardless of to hit.) <br>Holding Control when clicking will show next valid target that can be hit.</html>
+FiringDisplay.fireNextTarg.tooltip=<html>Selects the next target (regardless of to hit.) <br>Holding Control when clicking will show next valid target that can be hit. <br>Holding Shift when clicking will cause allies to be ignored.</html>
 FiringDisplay.fireNext=\ Next Unit
 FiringDisplay.fireStrafe=Strafe
 FiringDisplay.OverheatNag.title=Allow overheating?
