--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,8 @@ v0.41.27-git
 + Feature: PhaseDisplay buttons can now use tooltip text defined in i18n files
 + Bug: Manually targeting doesn't update next target id
 + Feature: Added "only valid" & "no allies" options to firing phase next target
++ Feature: Added keybinds for "only valid" & "no allies" next target  -- This
+	means that some of the default keybinds have changed, check client settings
 
 v0.41.26 (2016-11-02 02:00 UTC)
 + New Sprites.
