--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1028,6 +1028,18 @@ KeyBinds.cmdNames.nextTarget=Next Target
 KeyBinds.cmdDesc.nextTarget=Targets the next unit
 KeyBinds.cmdNames.prevTarget=Previous Target
 KeyBinds.cmdDesc.prevTarget=Targets the previous unit
+KeyBinds.cmdNames.nextTargetValid=Next Valid Target
+KeyBinds.cmdDesc.nextTargetValid=Targets the next unit that can be hit
+KeyBinds.cmdNames.prevTargetValid=Previous Valid Target
+KeyBinds.cmdDesc.prevTargetValid=Targets the previous unit that can be hit
+KeyBinds.cmdNames.nextTargetNoAllies=Next Target (No Allies)
+KeyBinds.cmdDesc.nextTargetNoAllies=Targets the next unit, never targeting allies
+KeyBinds.cmdNames.prevTargetNoAllies=Previous Target (No Allies)
+KeyBinds.cmdDesc.prevTargetNoAllies=Targets the previous unit, never targeting allies
+KeyBinds.cmdNames.nextTargetValidNoAllies=Next Valid Target (No Allies)
+KeyBinds.cmdDesc.nextTargetValidNoAllies=Targets the next unit that can be hit, never targeting allies
+KeyBinds.cmdNames.prevTargetValidNoAllies=Previous Valid Target (No Allies)
+KeyBinds.cmdDesc.prevTargetValidNoAllies=Targets the previous unit that can be hit, never targeting allies
 KeyBinds.cmdNames.undo=Undo
 KeyBinds.cmdDesc.undo=Undoes the last action, such as a movement step or firing action
 KeyBinds.cmdNames.centerOnSelected=Center on Selected
