--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.41.27-git
 + Feature: Added "only valid" & "no allies" options to firing phase next target
 + Feature: Added keybinds for "only valid" & "no allies" next target  -- This
 	means that some of the default keybinds have changed, check client settings
++ Bug: Heat-seeking LRM modifiers being applied before side table is set
 
 v0.41.26 (2016-11-02 02:00 UTC)
 + New Sprites.
