--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -14,6 +14,7 @@ v0.41.27-git
 + Data: Updated Key Binds.txt in Docs folder to take into account above valid
 	target feature.
 + Issue #393: Highlighting currently selected ASF flight path
++ Issue #416: Kill Count Victory ignores kills from destroyed units
 	
 v0.41.26 (2016-11-02 02:00 UTC)
 + Data: New Sprites.
