--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -15,6 +15,7 @@ v0.41.27-git
 	target feature.
 + Issue #393: Highlighting currently selected ASF flight path
 + Issue #416: Kill Count Victory ignores kills from destroyed units
++ Bug: Fix to Ammo Names and restoring Low/Profile for vehicles.
 	
 v0.41.26 (2016-11-02 02:00 UTC)
 + Data: New Sprites.
