Infantry cannot survive in extreme temperatures unless XCT

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -180,7 +180,7 @@ GameOptionsInfo.option.no_ignite_clear.description=If checked,\nclear hexes can'
 GameOptionsInfo.option.all_have_ei_cockpit.displayableName=(Unofficial) All units have EI cockpit
 GameOptionsInfo.option.all_have_ei_cockpit.description=If checked,\npilots with EI implants get the benefit in any unit,\nnot just clan mechs and BA.\n For pilot damage,\nProtomechs use Mech rules,\nall other units use BA rules.
 GameOptionsInfo.option.extreme_temperature_survival.displayableName=(Unofficial) Extreme temperature survival
-GameOptionsInfo.option.extreme_temperature_survival.description=If checked,\nInfantry and mechwarriors don't instantly die in extreme temperatures,\nbut you get a short time to save them.
+GameOptionsInfo.option.extreme_temperature_survival.description=If checked,\nInfantry and mechwarriors don't instantly die in extreme temperatures,\nbut you get a short time to save them.\nNot implemented.
 GameOptionsInfo.option.armed_mechwarriors.displayableName=(Unofficial) Armed MechWarriors
 GameOptionsInfo.option.armed_mechwarriors.description=If checked,\nMechWarriors carry a sidearm that can be fired using same rules as an infantry rifle.
 GameOptionsInfo.option.pilots_visual_range_one.displayableName=(Unofficial) Limited Mechwarrior Visibility
