--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -223,6 +223,7 @@ BoardView1.Tooltip.ArtilleryAttack1=Artillery: {0} in 1 turn<BR><FONT SIZE=-2>&n
 BoardView1.Tooltip.ArtilleryAttackN=Artillery: {0} in {2} turns<BR><FONT SIZE=-2>&nbsp;&nbsp;Ammo: {1}</FONT>
 BoardView1.Tooltip.SeenBy=Seen by: {0}
 BoardView1.Tooltip.Sensors=Sensor: {0}
+BoardView1.Tooltip.Spotting=Spotting {0}
 BoardView1.Tooltip.Swarmed=<FONT COLOR=#FF0000>Swarmed by {0}</FONT>
 BoardView1.Tooltip.Distance1=Distance from the selected unit: 1 Hex
 BoardView1.Tooltip.DistanceN=Distance from the selected unit: {0} Hexes
