--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -20,6 +20,7 @@ v0.41.27-git
 + Issue #48: Combine, Dual Saw, Chainsaw, improper damage against conv inf
 + Issue #411: MM allows illegal terrain combinations in boards
 + Added tooltip entry for spotting; spotters now display who they're spotting
++ Issue #422: Firing solutions now indicates units that are spotted
 	
 v0.41.26 (2016-11-02 02:00 UTC)
 + Data: New Sprites.
