--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -24,6 +24,7 @@ v0.41.27-git
 + Issue #395: New MechWarrior minimap icons: circle, or infantry icon w/ dot
 + Issue #423: Squadron Armor tab is empty
 + Issue #367: Building Fires Not Shown On Minimap
++ Bug: Jumping can never be considered "along a road"; fixes some missed PSRs
 	
 v0.41.26 (2016-11-02 02:00 UTC)
 + Data: New Sprites.
