Added Gusting Rain weather condition

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -52,6 +52,7 @@ PlanetaryConditions.Pitch\ Black=Pitch Black
 PlanetaryConditions.Light\ Rain=Light Rain
 PlanetaryConditions.Moderate\ Rain=Moderate Rain
 PlanetaryConditions.Heavy\ Rain=Heavy Rain
+PlanetaryConditions.Gusting\ Rain=Gusting Rain
 PlanetaryConditions.Torrential\ Downpour=Torrential Downpour
 PlanetaryConditions.Light\ Snowfall=Light Snowfall
 PlanetaryConditions.Moderate\ Snowfall=Moderate Snowfall
