Added Snow Flurries weather condition

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -58,6 +58,7 @@ PlanetaryConditions.Light\ Snowfall=Light Snowfall
 PlanetaryConditions.Moderate\ Snowfall=Moderate Snowfall
 PlanetaryConditions.Heavy\ Snowfall=Heavy Snowfall
 PlanetaryConditions.Sleet=Sleet
+PlanetaryConditions.Snow\ Flurries=Snow Flurries
 PlanetaryConditions.Ice\ Storm=Ice Storm
 PlanetaryConditions.Light\ Hail=Light Hail
 PlanetaryConditions.Heavy\ Hail=Heavy Hail
