--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -35,6 +35,7 @@ v0.41.27-git
 + Feature: Default Climb Mode is now an Advanced Client Setting
 + Issue #172: Climb Mode now defaults to "Climb Up" instead of "Go Thru"
 + Feature: Client Settings Advanced now displays human-readable names & tooltips
++ Issue #291: Rapids terrain validation & no PSR mods to hover, wige, vtol
 
 	
 v0.41.26 (2016-11-02 02:00 UTC)
