Fixes #399: Iso bridges not darkened by night
There was code in drawHex that would go through the hex image and adjust each
pixel's color based on the light level, however this code never fired for
the orthographic images drawn in isometric mode.  I pulled the code out into
a method and now it's also applied to the bridge image in drawOrthographic.

Unfortunately, the code requires a BufferedImage and the orthogrpahic images
aren't guaranteed to be ARGB BufferedImages so I added a call to
ImageUtil.createAcceleratedImage.  This isn't ideal, but there shouldn't be
many orthographic images right now, so it works.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -36,7 +36,7 @@ v0.41.27-git
 + Issue #172: Climb Mode now defaults to "Climb Up" instead of "Go Thru"
 + Feature: Client Settings Advanced now displays human-readable names & tooltips
 + Issue #291: Rapids terrain validation & no PSR mods to hover, wige, vtol
-
++ Issue #399: Isometric bridges not darkened by night overlay
 	
 v0.41.26 (2016-11-02 02:00 UTC)
 + Data: New Sprites.
