Added Blizzard weather condition

--- a/megamek/i18n/megamek/common/messages.properties
+++ b/megamek/i18n/megamek/common/messages.properties
@@ -59,6 +59,7 @@ PlanetaryConditions.Moderate\ Snowfall=Moderate Snowfall
 PlanetaryConditions.Heavy\ Snowfall=Heavy Snowfall
 PlanetaryConditions.Sleet=Sleet
 PlanetaryConditions.Snow\ Flurries=Snow Flurries
+PlanetaryConditions.Blizzard=Blizzard
 PlanetaryConditions.Ice\ Storm=Ice Storm
 PlanetaryConditions.Light\ Hail=Light Hail
 PlanetaryConditions.Heavy\ Hail=Heavy Hail
