--- a/megamek/i18n/megamek/common/report-messages.properties
+++ b/megamek/i18n/megamek/common/report-messages.properties
@@ -660,6 +660,7 @@
 6043=Armor reduces the damage to <data>.
 6045=Infantry platoon hit by fragmentation missiles!!!
 6050=Hardened unit hit by fragmentation missiles!!!  No damage.
+6051=Weapon cannot penetrate armor!!! No damage.
 6055=Infantry platoon hit by flechette ammunition!!!
 6060=Hardened unit hit by flechette ammunition!!!  Damage halved.
 6061=Target hit by acid warhead!  <data> damage.
