Fixes #373, Fixes #390 - Pulled in files from BW
Addes more textures for finishing the large texture tilset and also fixes some
issue with the ordering of tiles in various tilesets.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -166,6 +166,8 @@ v0.41.21 (2016-07-31 10:00 UTC)
 + Unit fixes and new sprites
 + Added missing report 6051 for reporting no damage from non-peneetrating inf
 	weapons
++ Issue #373: LargeTexture.tileset completion
++ Issue #390: MegaMek Thinks bldg_basement_type:* Is A Base
 
 v0.41.20 (2016-06-27 02:00)
 + Data: Date fixes for units
