Added game summary img options to Client Settings

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -667,6 +667,10 @@ CommonSettingsDialog.defaultWeaponSortOrderTooltip=<html>Sets the default weapon
 CommonSettingsDialog.entityOwnerColor=Border unit label with owner's color
 CommonSettingsDialog.entityOwnerColorTip=Unit labels will have a border around them that corresponds to the color of the player that owns the unit
 CommonSettingsDialog.useAverageSkills=Use the current random skill settings when adding units in the lobby.
+CommonSettingsDialog.gameSummaryBV.name=Save game summary image of board
+CommonSettingsDialog.gameSummaryBV.tooltip=At the end of certain phases, save an image of the board to {0}, creating a visual summary of the progression of the game.
+CommonSettingsDialog.gameSummaryMM.name=Save game summary image of minimap
+CommonSettingsDialog.gameSummaryMM.tooltip=At the end of certain phases, save an image of the minimap to {0}, creating a visual summary of the progression of the game.
 CommonSettingsDialog.generateNames=Generate a random name for the pilots of new units.
 CommonSettingsDialog.getFocus=Get Focus when a new phase begins.
 CommonSettingsDialog.keepGameLog=Keep a copy of the game log.
