Force font colors in colored BV tooltip tables
There are several HTML tables that get defined for board view tooltips that use
the TABLE BGCOLOR attribute.  These will set the background color for the table
and it works fine if the font text remains black.  There are instances however
where the user's configuration can change the colors for the tooltips (I assume
these are settigns inherited from the operating systems appearance settings).
If the tooltip text gets set to be something other than black, the text in the
table may not be readable.  To fix this, in any case where we force a
background color, I also force a font color of black.

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,6 +1,8 @@
 VERSION HISTORY:
 ----------------
 v0.41.28
++ Bug: Forced BG colors in BoardView tooltips could cause issues with inherited
+	tooltip font colors
 
 v0.41.27 (2016-12-07 03:00 UTC)
 + Feature: Can save board image with units (renders the same as seen on screen)
