--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -2,6 +2,8 @@ VERSION HISTORY:
 ----------------
 v0.41.28
 + Issue #437: Issues with tooltip foreground colors
++ Issue #438: "Show Wrecks" graphics option ignored in isometric mode
+
 v0.41.27 (2016-12-07 03:00 UTC)
 + Feature: Can save board image with units (renders the same as seen on screen)
 + Feature: PhaseDisplay buttons can now use tooltip text defined in i18n files
