Added ability for BoardEditor to load invalid maps
It becomes a pain to fix invalid maps if the board editor can't load them.
Now, invalid maps can be loaded, but a message is displayed that the map
is invalid.

Really, we should have a lot more support for indicating why the map is invalid
but I'm going to save that for a larger enhancement to the board editor.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -75,6 +75,8 @@ BoardEditor.CouldNotInitialiseMinimap=Could not initialise minimap:\n
 BoardEditor.CouldntInitialize=Could not initialise:\n
 BoardEditor.Done=Done
 BoardEditor.FatalError=Fatal Error
+BoardEditor.invalidBoard.message=The selected board has errors in it and may not display/work correctly.
+BoardEditor.invalidBoard.title=Invalid Board!
 BoardEditor.invalidTerrainTitle=Invalid Terrain!
 BoardEditor.labBoard=Board:
 BoardEditor.labElev=Elev:
