--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,6 +4,7 @@ v0.41.28
 + Issue #437: Issues with tooltip foreground colors
 + Issue #438: "Show Wrecks" graphics option ignored in isometric mode
 + Bug: Natural Aptitude Pilot/Gunnery restored.
++ Issue #434: Hex updates from server don't respect client set hex theme
 
 v0.41.27 (2016-12-07 03:00 UTC)
 + Feature: Can save board image with units (renders the same as seen on screen)
