Added report showing breakdown of current formation (if any) to AnalyzeFormationDialog.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1887,7 +1887,10 @@ ForceGenerationOptions.C3i=C3i
 ForceGenerationOptions.C3BLance=Boosted
 ForceGenerationOptions.C3BCommand=Company Command (Boosted)
 ForceGenerationOptions.Nova=Nova CEWS
+ForceGenerationOptions.noFormation=Unable to build formation with current parameters
 AnalyzeFormationDialog.title=Analyze Formation
+AnalyzeFormationDialog.tab.Current=Current
+AnalyzeFormationDialog.tab.Available=Available
 AnalyzeFormationDialog.formation=Formation: 
 AnalyzeFormationDialog.weightClassRange=Weight Class Range: 
 AnalyzeFormationDialog.all=All
