--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,5 +1,9 @@
 VERSION HISTORY:
 ----------------
+v0.42.1-git
++ Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
+	BA SRM4(OS) and BA LBX
+
 v0.42.0 (2017-01-01 14:00 UTC)
 + Issue #441: Fled units not being saved at the end of the game
 + Data/Feature: Turret Project Part 3 - Major additions to the number and 
