Make sure Princess is initialized at the beginning of physical turn.
Fixes #467: Princess bot NPEs in physical attacks phase

--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 v0.42.1-git
 + Issues #47/#48 from MML Tracker - Critical Slot allocations wrong for
 	BA SRM4(OS) and BA LBX
++ Issue #467: Princess bot NPEs in physical attacks phase
 
 v0.42.0 (2017-01-01 14:00 UTC)
 + Issue #441: Fled units not being saved at the end of the game
