--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.43.0-git
 	BA SRM4(OS) and BA LBX
 + Issue #467: Princess bot NPEs in physical attacks phase
 + Issue #427: Firing weapons split across arm/torso while prone
++ Data: Some unit fixes, and new maps from DancefloorLandmine
 
 v0.42.0 (2017-01-01 14:00 UTC)
 + Issue #441: Fled units not being saved at the end of the game
