Added armor kit selection to unit configuration options in lounge.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -782,6 +782,7 @@ CustomMechDialog.Callsign=Callsign
 CustomMechDialog.connect1=Connect to {0} [{1} free]
 CustomMechDialog.connect2=Connect to {0} ({1} free)
 CustomMechDialog.CreateNewNetwork=Create new network (6 free)
+CustomMechDialog.Custom=Custom
 CustomMechDialog.doNotSwapUnits=-- Do Not Swap Units --
 CustomMechDialog.East=East
 CustomMechDialog.EnterCorrectVelocity=Velocity must be between 0 and twice safe thrust.
