Require airborn Microlite VTOL infantry to enter a new hex or land during movement phase.

--- a/megamek/i18n/megamek/client/messages.properties
+++ b/megamek/i18n/megamek/client/messages.properties
@@ -1590,6 +1590,8 @@ MovementDisplay.ConfirmLaunch=Launching this many units will exceed this bay's l
 MovementDisplay.MagmaCrustMoving=Crossing magma crust will break through on 6+ on 1d6.\n
 MovementDisplay.MagmaLiquidMoving=Red hot molten lava melts armour and destroys non-mechs!\n
 MovementDisplay.ManeuverDialog.title=Choose Maneuver
+MovementDisplay.MicroliteMove.message=Microlite VTOL units must enter a new hex each turn to remain in flight.\n
+MovementDisplay.MicroliteMove.title=Microlite VTOL movement
 MovementDisplay.Move=Move
 MovementDisplay.MoveEnvelope=Show possible moves
 MovementDisplay.NoMinefield=No minefield in hex\!
