--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -7,6 +7,7 @@ v0.43.0-git
 + Issue #427: Firing weapons split across arm/torso while prone
 + Data: Some unit fixes, and new maps from DancefloorLandmine
 + Data: Sprite fixes and new Sprites.
++ Data: More Sprite/Unit/Board Fixes
 
 v0.42.0 (2017-01-01 14:00 UTC)
 + Issue #441: Fled units not being saved at the end of the game
