Fixing missing Pilot Option Description

--- a/megamek/i18n/megamek/common/options/messages.properties
+++ b/megamek/i18n/megamek/common/options/messages.properties
@@ -586,23 +586,18 @@ PilotOptionsInfo.option.clan_pilot_training.displayableName=Clan Pilot Training 
 PilotOptionsInfo.option.clan_pilot_training.description=Pilot has a +1 penalty for physical attacks,\nbecause clans do not train for dishonourable combat.
 
 PilotOptionsInfo.group.md.displayableName=Manei Domini Implants
-
 PilotOptionsInfo.option.artificial_pain_shunt.displayableName=Artificial Pain Shunt
 PilotOptionsInfo.option.artificial_pain_shunt.description=Pilot does not suffer damage from certain kinds of attacks.\nSee IO pg 78 for details.
 PilotOptionsInfo.option.comm_implant.displayableName=Cybernetic Comm Implant
-PilotOptionsInfo.option.comm_implant.description=NEED FLUFF. \nSee IO pg 78 for details. 
+PilotOptionsInfo.option.comm_implant.description=-1 to Target Number for indirect LRM attacks when spotting, also -1 to target number for spotting mines\nSee IO pg 78 for details. 
 PilotOptionsInfo.option.boost_comm_implant.displayableName=Boosted Cybernetic Comm Implant
-PilotOptionsInfo.option.boost_comm_implant.description=NEED FLUFF \nSee IO pg 78 for details.
- 
+PilotOptionsInfo.option.boost_comm_implant.description=As Cybernetic Comm Implant but adds ability to connect to C3i\nSee IO pg 78 for details.
 PilotOptionsInfo.option.cyber_imp_visual.displayableName=Sensory Implants (IR/EM Optical)
 PilotOptionsInfo.option.cyber_imp_visual.description=Conventional Infantry units receive 2-hex Active Probe. \nSee IO pg 78 for details.
-
 PilotOptionsInfo.option.cyber_imp_audio.displayableName=Sensory Implants (Enhanced Audio)
 PilotOptionsInfo.option.cyber_imp_audio.description=Infantry units receive 2-hex Active Probe. \nSee IO pg 78 for details.
-
 PilotOptionsInfo.option.cyber_imp_laser.displayableName=Sensory Implants (Laser/Telescopic Eyes)
 PilotOptionsInfo.option.cyber_imp_laser.description=Conventional infantry units receive -1 to-hit with ranged weapons. \nSee IO pg 78 for details.
-
 PilotOptionsInfo.option.mm_implants.displayableName=Multi-Modal Sensory Implant
 PilotOptionsInfo.option.mm_implants.description=Combination of Eye/Ear/Laser \nSee IO pg 79 for details.
 PilotOptionsInfo.option.enh_mm_implants.displayableName=Enhanced Multi-Modal Sensory Implants
@@ -625,7 +620,8 @@ PilotOptionsInfo.option.vdni.displayableName=VDNI
 PilotOptionsInfo.option.vdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
 PilotOptionsInfo.option.bvdni.displayableName=Buffered VDNI
 PilotOptionsInfo.option.bvdni.description=Pilot is more connected with vehicle.\nSee IO pg 82 for details.
-PilotOptionsInfo.option.pl_enhanced.displayableName=Prosthetic limbs, Enhanced
+PilotOptionsInfo.option.pl_enhanced.displayableName=Prosthetic limbs, Enhanced (Not coded)
+PilotOptionsInfo.option.pl_enhanced.description=Additional Daamage to unit weapons.\n See IO 84 for details
 PilotOptionsInfo.option.grappler.description=Was Grappler/Electromagnet - \nSee IO pg 84 for details
 PilotOptionsInfo.option.pl_masc.displayableName=Prosthetic leg MASC
 PilotOptionsInfo.option.pl_masc.description=Conventional Infantry units can go faster.
